implemented active bar menu (without the method "Share the App");

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -2,4 +2,6 @@
 <resources>
     <string name="app_name">Фонарик</string>
     <string name="switch_btn_description">Вкл. / Выкл.</string>
+    <string name="share_app">Отправить ссылку на приложение</string>
+    <string name="contact_us">Написать разработчику</string>
 </resources>
