added a button "Exit" to options menu;

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -4,4 +4,5 @@
     <string name="switch_btn_description">Вкл. / Выкл.</string>
     <string name="share_app">Отправить ссылку на приложение</string>
     <string name="contact_us">Написать разработчику</string>
+    <string name="exit">Закрыть приложение</string>
 </resources>
